# pw_zai_project_1

./: .env-example  .flaskenv  .gitignore  MAKEFILE  README.md  hash_test.py  pyproject.toml
Diagrams/: Database.puml
queries/: create_table.sql  delete_table.sql  drop_all_tables.sql  populate_category.sql  populate_event.sql
test/: db_test.py  db_test_raw.py  hash_test.py
test/timeline_test/: index.html  style.css
timeline_app/: __init__.py  forms.py  helpers.py  models.py  routes.py
timeline_app/models/: __init__.py  category.py  event.py  icon.py  user.py
timeline_app/queries/: clear_all_tables.sql  create_table.sql  populate_tables.sql
timeline_app/static/css/: category.css  event.css  forms.css  main.css  movie_details.css  movies.css  print.css  reset.css  timeline.css
timeline_app/templates/: add_category.html  add_event.html  edit_categories.html  edit_category.html  index.html  layout.html  login.html  movie_details.html  movie_form.html  new_movie.html  register.html  timeline.html
timeline_app/templates/macros/: fields.html  footer.html  nav.html  svgs.html
